--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,18 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="add_course_information">ADD COURSE INFORMATION</string>
+    <string name="enter1">Enter</string>
+    <string name="course_id">Course ID</string>
+    <string name="enter2">Enter</string>
+    <string name="instructor">Instructor</string>
+    <string name="enter3">Enter</string>
+    <string name="course_title">Course Title</string>
+    <string name="enter4">Enter</string>
+    <string name="discription">Discription</string>
+    <string name="start_date">Start Date</string>
+    <string name="end_date">End Date</string>
+    <string name="submit">SUBMIT</string>
+    <string name="assignment_id">Assignment ID</string>
+    <string name="course_id">Course ID</string>
 </resources>
